      alongside _ROOT_ when honoring the --extract flag. (CNY-2530)
    * Group recipes now have the startGroup command, which calls
      createGroup, addNewGroup and setDefaultGroup in one step.
      (CNY-2197)
    * addCvsSnapshot no longer caches the HEAD of the repository,
      since cvs export will not use it anyway. (CNY-2568)

  o Bug Fixes:
    * Conary no longer loses ownership of changed files when updating
      multiple flavors of the same version of the same package at the same
      time. (CNY-2553)
    * If Conary is running on kernels which, under certain circumstances,
      return EINVAL when calling poll(), the lazy file cache will only
      count the file descriptors it has open itself. (CNY-2571)

Changes in 1.2.18:
  o Build Changes:
    * Handling pkg-config dependencies has been moved to conary-policy.
      (CNP-93)

  o Bug Fixes:
    * When resuming the update after the execution of a critical update,
      Conary will now use the original file replacement flags. This
      corrects file conflict errors in a migrate when a critical update
      was present. (CNY-2513)
    * The lazy file cache was using /proc/self/fd as a method of
      determining the number of open file descriptors for the current
      process. However, under certain circumstances the directory is not
      readable. The lazy file cache now uses a poll(2)-based technique.
      (CNY-2536)

Changes in 1.2.17:
  o Build Changes:
    * Java dependencies for classes that are not dependency-complete
      are now automatically disabled. To re-enable them, the missing
      dependencies should be added as buildRequires. (CNY-2175)

  o Bug Fixes:
    * A minor bug in the display of the password prompt has been fixed.
      (CNY-2497)
    * Slow SQL queries used to remove unused entries from the
      TroveFiles table and TroveTroves table have been rewritten to
      make some queries faster with repositories implemented with a
      sqlite database. (CNY-2515)