@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2004-2006 rPath, Inc.
+# Copyright (c) 2004-2008 rPath, Inc.
 #
 # This program is distributed under the terms of the Common Public License,
 # version 1.0. A copy of this license should have been distributed with this
@@ -12,13 +12,11 @@
 # full details.
 #
 
-import glob
 import os
-import imp
 import inspect
 import itertools
 
-from conary.build.recipe import Recipe, RECIPE_TYPE_PACKAGE
+from conary.build.recipe import Recipe, RECIPE_TYPE_PACKAGE, loadMacros
 from conary.build.loadrecipe import _addRecipeToCopy
 from conary.build.errors import RecipeFileError
 from conary import trove
@@ -45,23 +43,6 @@ crossMacros = {
     'headerpath'	: '%(sysroot)s%(includedir)s'
 }
 
-def loadMacros(paths):
-    baseMacros = {}
-    loadPaths = []
-    for path in paths:
-        globPaths = sorted(list(glob.glob(path)))
-        loadPaths.extend(globPaths)
-
-    for path in loadPaths:
-        compiledPath = path+'c'
-        deleteCompiled = not util.exists(compiledPath)
-        macroModule = imp.load_source('tmpmodule', path)
-        if deleteCompiled:
-            util.removeIfExists(compiledPath)
-        baseMacros.update(x for x in macroModule.__dict__.iteritems()
-                          if not x[0].startswith('__'))
-
-    return baseMacros
 
 class _recipeHelper:
     def __init__(self, list, recipe, theclass):
